--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
