--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "ftn-find",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
     "dev-turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "validate-env": "node scripts/validate-env.js",
+    "deploy:heroku": "./scripts/deploy-heroku.sh"
   },
   "dependencies": {
     "@google/genai": "^1.9.0",
